Fix post wall_id issue. Style user search to wrap text

--- a/app/assets/stylesheets/user_display/user_display.css
+++ b/app/assets/stylesheets/user_display/user_display.css
@@ -30,14 +30,17 @@
 }
 
 /* display item */
-
+.user-display-username {
+  overflow-wrap: break-word;
+}
 .single-user-search-item {
-  height: 110px;
+  height: 120px;
   background-color: #fff;
   border: 1px solid #dddfe2;
   text-align: center;
   margin: 5px;
-  padding-top: 20px;
+  padding-top: 10px;
+  text-overflow: wrap;
 }
 
 .single-user-search-item:hover {
@@ -57,5 +60,4 @@
   border: 1px solid #fff;
   border-radius: 50px;
   position: relative;
-  margin-top: 10px;
 }
